# Object-Guided-Relocalisation

./: .gitignore  CMakeLists.txt  README.md  draw_trajectory.py  evaluation.py  rename_gtposes.py
cmake/: FindAzure.cmake  FindOpenNI2.cmake  InstallGLSL.cmake
example/: CMakeLists.txt
example/azure/: CMakeLists.txt  main.cpp
example/tum/: CMakeLists.txt
example/vil/: CMakeLists.txt  const_main.cpp  main.cpp  reloc_main.cpp  submap_main.cpp  visualiseMapReg.cpp
glsl_shader/: colour.vert  direct_output.frag  phong.vert
include/: map_manager.h  system.h
include/data_struct/: hash_entry.h  intrinsic_matrix.h  map_cuboid.h  map_object.h  map_point.h  map_quadric.h  map_struct.h  rgbd_frame.h  voxel.h
include/detection/: detector.h  map_object.h
include/features/: extractor.h  matcher.h
include/input/: azure.h  tum_loader.h
include/keyframe_graph/: keyframe_graph.h
include/mapping/: MeshEngine.h  ObjectMap.h  ParallelScan.h  RayTraceEngine.h  SubmapManager.h  TriangleTable.h  VoxelMap.h  VoxelStructUtils.h
include/math/: matrix_type.h  vector_type.h
include/optimizer/: graph_optimizer.h
include/relocalization/: ransac_ao.h  relocalizer.h
include/tracking/: build_pyramid.h  cuda_imgproc.h  device_image.h  icp_tracker.h  m_estimator.h  pose_estimator.h  reduce_sum.h  rgbd_frame.h  rgbd_odometry.h
include/utils/: macros.h  revertable.h  safe_call.h  safe_queue.h  settings.h
include/utils/math/: matrix_type.h  vector_type.h
include/visualization/: drawer.h  main_window.h
include/voxel_hashing/: device_tables.h  map_proc.h  prefix_sum.h  voxel_hashing.h
src/: map_manager.cpp  system.cpp
src/data_struct/: map_cuboid.cpp  map_object.cpp  map_struct.cu  rgbd_frame.cpp
src/detection/: detector.cpp  map_cuboid.cpp  map_object.cpp  object_class.txt
src/features/: extractor.cpp  matcher.cpp
src/input/: azure.cpp  tum_loader.cpp
src/keyframe_graph/: keyframe_graph.cpp
src/mapping/: MeshEngine.cu  ObjectMap.cpp  RayTraceEngine.cu  SubmapManager.cpp  VoxelMap.cu
src/optimizer/: graph_optimizer.cpp
src/relocalization/: ransac_ao.cpp  relocalizer.cpp
src/tracking/: build_pyramid.cpp  cuda_imgproc.cu  device_image.cpp  icp_tracker.cpp  m_estimator.cu  pose_estimator.cu  rgbd_frame.cpp  rgbd_odometry.cpp
src/utils/: settings.cpp
src/visualization/: drawer.cpp  main_window.cpp
src/voxel_hashing/: depth_fusion.cu  ray_tracing.cu  scene_mesh.cu  voxel_hashing.cpp
